[gd_scene load_steps=29 format=2]

[ext_resource path="res://Pixel Adventure 1/Free/Enemies/AngryPig/Idle (36x30).png" type="Texture" id=1]
[ext_resource path="res://Pixel Adventure 1/Free/Enemies/AngryPig/Run (36x30).png" type="Texture" id=2]
[ext_resource path="res://Scenes/AngryPigScript.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 324, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 396, 0, 36, 30 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 90.25, 45.25 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12, 12.75 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 11.5, 12.5 )

[node name="AngryPig" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Idle"
frame = 7
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -14.5, -28.5 )
enabled = true
collision_mask = 2

[node name="PlayerViewDetector" type="Area2D" parent="."]
position = Vector2( -0.375, 5 )

[node name="PlayerViewDetectorCollision" type="CollisionShape2D" parent="PlayerViewDetector"]
position = Vector2( -39.875, -35.25 )
shape = SubResource( 24 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="PlayerDetectorCollision" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0.5, 2.25 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 25 )

[connection signal="body_entered" from="PlayerViewDetector" to="." method="_on_PlayerViewDetector_body_entered"]
[connection signal="body_exited" from="PlayerViewDetector" to="." method="_on_PlayerViewDetector_body_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
